--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-nascam-elements",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "React Native Elements & UI Toolkit by Nascam",
   "main": "src/index.js",
   "types": "src/index.d.ts",
@@ -8,7 +8,9 @@
     "react-native",
     "reactjs",
     "reactnative",
-    "bootstrap"
+    "bootstrap",
+    "elements",
+    "maskededit"
   ],
   "scripts": {
     "test": "jest",
@@ -23,14 +25,9 @@
   "author": "Leandro Costa Camilo",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/react-native-elements/react-native-elements/issues"
+    "url": "https://github.com/lcamilo/react-native-nascam-elements/issues"
   },
-  "homepage": "https://react-native-elements.github.io/react-native-elements/",
-  "collective": {
-    "type": "opencollective",
-    "url": "https://opencollective.com/react-native-elements",
-    "logo": "https://opencollective.com/react-native-elements/logo.txt"
-  },
+  "homepage": "https://github.com/lcamilo/react-native-nascam-elements",
   "dependencies": {
     "@types/react-native-vector-icons": "^6.4.4",
     "color": "^3.1.0",
@@ -39,7 +36,8 @@
     "opencollective-postinstall": "^2.0.0",
     "prop-types": "^15.7.2",
     "react-native-ratings": "^6.5.0",
-    "react-native-status-bar-height": "^2.2.0"
+    "react-native-status-bar-height": "^2.2.0",
+    "date-and-time": "0.9.0"
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^0.0.5",
@@ -113,7 +111,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/react-native-elements/react-native-elements.git"
+    "url": "git+https://github.com/lcamilo/react-native-nascam-elements.git"
   },
   "husky": {
     "hooks": {
